# DrawBot_CNC

Interfaccia_Grafica/DrawBot/: DrawBot.pro  Immagini.qrc  main.cpp  main.qml  qml.qrc  structpath.cpp  structpath.h
fileArduino/: CMakeLists.txt  DRAWBOTLIB.h  DRAWBOTLIB_STRUCT.h  DrawBot_control.cpp  info
fileArduino/app/: CMakeLists.txt
fileArduino/app/src/: DrawBot_control.cpp
fileArduino/cmake/toolchain/: avr.toolchain.cmake  mega.toolchain.cmake
fileArduino/lib/: CMakeLists.txt
fileArduino/lib/DRAWBOTLIB/: CMakeLists.txt  keywords.txt
fileArduino/lib/DRAWBOTLIB/include/: DRAWBOTLIB.h  DRAWBOTLIB_DEFINE.h
fileArduino/lib/DRAWBOTLIB/src/: DRAWBOTLIB.cpp
fileArduino/lib/Servo/: CMakeLists.txt
fileArduino/lib/Servo/include/: Servo.h  ServoTimers.h
inCpp/: DRAWBOTLIB.cpp  DRAWBOTLIB.h  DrawBot_control  DrawBot_control.cpp  com_file.txt  comandi.txt  config.txt  graph_creator.py
scrittura/: Gcode  adattatore.py  cerchio  pene  pene_mod  rettangoli  scrivano.py  scrivano_manuale.py  settings(1).jscut
